Se renombran los directorios y se agrega un README

--- a/index.html
+++ b/index.html
@@ -9,16 +9,16 @@
 
     <meta property="og:title" content="Calculadora PayPal"/>
     <!-- <meta property="og:url" content="https://tusaldopokerstars.com"/> -->
-	<meta property="og:image" content="https://tusaldopokerstars.com/img/miniatura.jpg"/>
-	<meta property="og:image:secure_url" content="https://tusaldopokerstars.com/img/miniatura.jpg"/>
+	<meta property="og:image" content="https://tusaldopokerstars.com/images/miniatura.jpg"/>
+	<meta property="og:image:secure_url" content="https://tusaldopokerstars.com/images/miniatura.jpg"/>
 	<meta property="og:image:width" content="300px" />
 	<meta property="og:image:height" content="300px" />
 	<meta property="og:type" content="website" />
 	<meta property="og:description" content="by @barbozadiego_"/>
 
-    <link rel="icon" href="img/favicon.png">
-    <link rel="stylesheet" href="css/styles.css?v15">
-    <link rel="stylesheet" href="css/responsive.css?v15">
+    <link rel="icon" href="images/favicon.png">
+    <link rel="stylesheet" href="styles/styles.css">
+    <link rel="stylesheet" href="styles/responsive.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
 
 </head>
@@ -28,7 +28,7 @@
 <!------------------------------------| Box Header |------------------------------------>
      
         <header>
-            <div class="box-logo"><img class="logo" src="img/logo.svg" alt="Logo Calculadora Paypal"></div>
+            <div class="box-logo"><img class="logo" src="images/logo.svg" alt="Logo Calculadora Paypal"></div>
         </header>
         
 <!------------------------------------| Box Calculator |------------------------------------>
@@ -139,6 +139,6 @@
         </footer>
 
  </div>    
-    <script src="scripts/index.js?v5"></script>
+    <script src="js/index.js"></script>
 </body>
 </html>
