Update instagram user

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                         <div>
                         <label>  
                                 <div class="description-label">Para Recibir $:</div>
-                                <div class="box-input-receive"><input type="text" id="receiveQuantity" autocomplete="off" onkeypress="return dataValid(event)"></div>
+                                <div class="box-input-receive"><input type="text" id="receiveQuantity" autocomplete="off" onkeypress="() => dataValid(event)"></div>
                         </label>
                         <label> 
                                 <div class="description-label">Enviar $:</div>
@@ -83,7 +83,7 @@
                         <h2 class="header-send">Calculadora para Enviar</h2>
                         <label>  
                                 <div class="description-label"> Si Envias $:</div>
-                                <div class="box-input-send"><input type="text" id="sendQuantity" autocomplete="off" onkeypress="return dataValid(event)"></div> </label>
+                                <div class="box-input-send"><input type="text" id="sendQuantity" autocomplete="off" onkeypress="() => dataValid(event)"></div> </label>
                         <label>  
                                 <div class="description-label">Comisión $:</div>
                                 <div class="box-input-send"><input type="text" id="fee" disabled></div>
@@ -135,7 +135,7 @@
 <!------------------------------------| Box Footer |------------------------------------>  
 
         <footer>
-                <p class="credits">website developed by <a href="http://www.instagram.com/barbozadiego_" target="_blank"><strong>@barbozadiego_</strong></a></p>
+                <p class="credits">website developed by <a href="http://instagram.com/barbozadiego_dev" target="_blank"><strong>@barbozadiego_dev</strong></a></p>
         </footer>
 
  </div>    
