--- a/index.html
+++ b/index.html
@@ -1,20 +1,20 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
-    <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
-
     <title>Calculadora Paypal 2020</title>
 
-    <meta property="og:title" content="Calculadora PayPal"/>
-    <!-- <meta property="og:url" content="https://tusaldopokerstars.com"/> -->
-	<meta property="og:image" content="https://tusaldopokerstars.com/images/miniatura.jpg"/>
-	<meta property="og:image:secure_url" content="https://tusaldopokerstars.com/images/miniatura.jpg"/>
-	<meta property="og:image:width" content="300px" />
-	<meta property="og:image:height" content="300px" />
-	<meta property="og:type" content="website" />
-	<meta property="og:description" content="by @barbozadiego_"/>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="google" content="notranslate">
+    
+    <meta property="og:title" content="🔢 Calculadora PayPal 2020" />
+    <!-- <meta property="og:url" content="https://calculadora-paypal.netlify.app /> -->
+    <meta property="og:image:secure_url" content="https://calculadora-paypal.netlify.app/images/miniatura.jpg" />
+    <meta property="og:image" content="https://calculadora-paypal.netlify.app/images/miniatura.jpg" />
+    <meta property="og:image:width" content="300px" />
+    <meta property="og:image:height" content="300px" />
+    <meta property="og:type" content="website" />
+    <meta property="og:description" content="Paypal commission calculator by @barbozadiego_"/>
 
     <link rel="icon" href="images/favicon.png">
     <link rel="stylesheet" href="styles/styles.css">
